--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <section>
     
-    <img src="avatar-jessica.jpeg" alt="" />
+    <img src="avatar-jessica.jpeg" alt="Author Profile Image" />
     
     <h1>Jessica Randall</h1>
     <p id="location">London, United Kingdom</p>
